# PrivateInformationRetreival

./: CMakeLists.txt  README.md
scripts/: debug.sh  fast.sh
src/: CMakeLists.txt  client.cpp  client.hpp  globals.hpp  main.cpp  server.cpp  server.hpp  tools.cpp  tools.hpp
